--- a/pos-frontend/package.json
+++ b/pos-frontend/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zustand": "^5.0.10"
   }
 }
